--- a/.teamcity.yml
+++ b/.teamcity.yml
@@ -1,7 +1,37 @@
-name: Yaml Load Store Sample 3
+name: TCP - Pipeline YAML Load
 jobs:
   Job1:
-    name: Job 1
+    name: Job A
     steps:
       - type: script
-    runs-on: Linux-Medium
+        script-content: echo "test Job A" >> test-a.txt
+        name: Job A - Stash Test File
+    runs-on: Linux-Small
+    files-publication:
+      - '*'
+    allow-reuse: false
+  JobB:
+    name: Job B
+    runs-on: Linux-Small
+    steps:
+      - type: script
+        script-content: echo "Test B" >> test-b.txt
+        name: Job B - Stash Test File
+    files-publication:
+      - '*.txt'
+  JobC:
+    name: Job C
+    runs-on: Ubuntu-20.04-Small
+    steps:
+      - type: script
+        script-content: |-
+          cat test-a.txt
+          cat test-b.txt
+        name: Open artifacts from artifact dependencies
+    dependencies:
+      - Job1:
+          files:
+            - '*'
+      - JobB:
+          files:
+            - '*.txt'
